--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 body{
     /* background-color: yellow; */
 }
+
+.headerImage{
+    width: 100vw;
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
