--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 .headerImage{
     width: 100vw;
     height: 60vh;
@@ -59,5 +63,6 @@
 
 .fullVideo iframe{
     max-width: 100%;
+    width: 100%;
     height: auto;
 }
